--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -20,13 +20,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Popular"/>
+                android:text="Popular"
+                android:textSize="20sp"
+                android:textColor="#0a37b3"
+                android:padding="6dp"
+                android:layout_marginBottom="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/see_all"
-                android:onClick="seeAllPopular"/>
+                android:visibility="gone"/>
 
         </LinearLayout>
 
@@ -40,7 +44,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Now Showing"/>
+            android:text="Now Showing"
+            android:textSize="20sp"
+            android:textColor="#0a37b3"
+            android:padding="6dp"
+            android:layout_marginBottom="8dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewNowShowing"
@@ -50,7 +58,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Upcoming"/>
+            android:text="Upcoming"
+            android:textSize="20sp"
+            android:textColor="#0a37b3"
+            android:padding="6dp"
+            android:layout_marginBottom="8dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewUpcoming"
@@ -60,7 +72,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Top Rated"/>
+            android:text="Top Rated"
+            android:textSize="20sp"
+            android:textColor="#0a37b3"
+            android:padding="6dp"
+            android:layout_marginBottom="8dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewTopRated"
