--- a/app/src/main/res/layout/row_layout_rectangular.xml
+++ b/app/src/main/res/layout/row_layout_rectangular.xml
@@ -31,7 +31,8 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:text="Jurassic World"
-            android:textSize="22sp"
+            android:textSize="18sp"
+            android:padding="6dp"
             android:textColor="#ffffff"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
