--- a/app/src/main/res/layout/row_layout_square.xml
+++ b/app/src/main/res/layout/row_layout_square.xml
@@ -6,7 +6,9 @@
     android:layout_width="109dp"
     android:layout_height="250dp"
     android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginRight="3dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,13 +30,13 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="4dp"
             android:text="Jurassic World"
             android:textSize="14sp"
+            android:padding="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
 
         <CheckBox
             android:id="@+id/checkbox"
@@ -46,6 +48,7 @@
             android:focusable="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
