--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,13 +9,13 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Import" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_movies"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Movies" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_tv"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="TV Shows" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
