Infinite loading and other features implemented

--- a/app/src/main/res/layout/row_layout_rectangular.xml
+++ b/app/src/main/res/layout/row_layout_rectangular.xml
@@ -29,27 +29,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="Jurassic World"
-            android:textSize="18sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:minLines="1"
             android:padding="6dp"
+            android:shadowColor="@color/text_shadow"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2.5"
+            android:text="Jurassic World"
             android:textColor="#ffffff"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/ratingTextView"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/ratingTextView"
-            android:textColor="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:shadowColor="@color/text_shadow"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2.5"
             android:text="6.6*"
-            android:textStyle="bold"
+            android:ellipsize="end"
+            android:textColor="#ffffff"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/imageView" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/movieNameTextView"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/movieNameTextView" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="18sp"
+            android:layout_height="18sp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:shadowColor="@color/text_shadow"
+            android:shadowRadius="2.5"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:src="@drawable/star_image"
+            app:layout_constraintBottom_toBottomOf="@+id/ratingTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ratingTextView" />
 
         <TextView
             android:id="@+id/genreTextView"
