--- a/app/src/main/res/layout/activity_details_scrolling.xml
+++ b/app/src/main/res/layout/activity_details_scrolling.xml
@@ -7,21 +7,66 @@
     android:fitsSystemWindows="true"
     tools:context=".DetailsScrollingActivity">
 
+    <!--android:layout_height="@dimen/app_bar_height"-->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="300dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="300dp">
+
+                <ImageView
+                    android:id="@+id/backdropImageView_Detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/jurasic" />
+
+
+
+                <LinearLayout
+                    android:id="@+id/titleLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_gravity="bottom"
+                    android:background="#060606"
+                    android:orientation="vertical">
+
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:gravity="center"-->
+                        <!--android:text="Mission Impossible"-->
+                        <!--android:textColor="#ffff"-->
+                        <!--android:textSize="30sp" />-->
+                </LinearLayout>
+
+
+                <ImageView
+                    android:id="@+id/poster_image_detail"
+                    android:layout_width="116dp"
+                    android:layout_height="160dp"
+                    android:background="#ffff56"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="40dp"
+                    app:layout_anchor="@id/titleLayout"
+                    app:layout_anchorGravity="center_vertical" />
+            </FrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_details"
@@ -30,28 +75,23 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+
         </android.support.design.widget.CollapsingToolbarLayout>
+
+
     </android.support.design.widget.AppBarLayout>
-
-
 
     <include layout="@layout/content_details_activity" />
 
-    <ImageView
-        android:id="@+id/poster_image_detail"
-        android:layout_width="109dp"
-        android:layout_height="160dp"
-        android:background="#ffff56"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|start"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab_details"-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--app:layout_anchor="@id/app_bar"-->
+        <!--app:layout_anchorGravity="bottom|end"-->
+        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
 </android.support.design.widget.CoordinatorLayout>
