--- a/app/src/main/res/layout/content_details_activity.xml
+++ b/app/src/main/res/layout/content_details_activity.xml
@@ -8,11 +8,98 @@
     tools:context=".DetailsScrollingActivity"
     tools:showIn="@layout/activity_details_scrolling" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/ratingTextView_Detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5.5*"
+            android:textSize="20sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/description_detail"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/castTitleTextView"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cast"
+                android:textSize="20sp"
+                android:textColor="#0a37b3"
+                android:padding="6dp"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/similarCastTextView"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:padding="8dp"
+                android:textColor="#0a37b3"
+                android:onClick="seeAllCast"
+                android:text="@string/see_all"/>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:visibility="gone"
+            android:id="@+id/recyclerViewCasts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/similarMoviesTitleTextView"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#0a37b3"
+                android:padding="6dp"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/similarSeeAll"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:padding="8dp"
+                android:textColor="#0a37b3"
+                android:onClick="seeAll"
+                android:text="@string/see_all"/>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewSimilar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:text="@string/large_text" />
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
