many functionalities changed

--- a/app/src/main/res/layout/activity_cast_details.xml
+++ b/app/src/main/res/layout/activity_cast_details.xml
@@ -10,14 +10,14 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="400dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -28,22 +28,23 @@
                 android:layout_height="300dp">
 
                 <ImageView
-                    android:id="@+id/backdropImageView_Detail"
+                    android:id="@+id/backdropImageView_Cast"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="400dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/jurasic" />
+                    android:src="@drawable/images_loading" />
 
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_details"
+                android:id="@+id/toolbar_cast"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_marginTop="24dp"
+                android:layout_height="30dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-
+            <!--android:layout_height="?attr/actionBarSize"-->
         </android.support.design.widget.CollapsingToolbarLayout>
 
 
