--- a/app/src/main/res/layout/content_cast_details.xml
+++ b/app/src/main/res/layout/content_cast_details.xml
@@ -13,24 +13,49 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:text="Biography"
+            android:textSize="15sp"
+            android:textColor="#030f8c"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/biographyTextView"
+            android:padding="8dp"
+            android:textSize="11sp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/readMoreBiographyTextView"
+            android:textColor="#0a0885"
+            android:textSize="12sp"
+            android:textAlignment="center"
+            android:text="Read More"
+            android:onClick="readMoreBiography"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tvCastTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Popular"
+                android:text="TV Cast"
                 android:textSize="20sp"
                 android:textColor="#0a37b3"
                 android:padding="6dp"
                 android:layout_marginBottom="8dp"/>
 
             <TextView
-                android:id="@+id/popularTextView"
+                android:id="@+id/seeAllTvCastTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="seeAllTvCast"
                 android:gravity="right"
                 android:padding="8dp"
                 android:textColor="#0a37b3"
@@ -38,10 +63,41 @@
 
         </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewTvCast"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/movieCastTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Movie Cast"
+                android:textSize="20sp"
+                android:textColor="#0a37b3"
+                android:padding="6dp"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="seeAllMovieCast"
+                android:gravity="right"
+                android:padding="8dp"
+                android:textColor="#0a37b3"
+                android:text="@string/see_all"/>
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerViewPopular"
+            android:id="@+id/recyclerViewMovieCast"
             android:layout_width="match_parent"
             android:layout_height="300dp"/>
 
