--- a/app/src/main/res/layout/activity_details_scrolling.xml
+++ b/app/src/main/res/layout/activity_details_scrolling.xml
@@ -73,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:fitsSystemWindows="false"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
