--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,16 +9,24 @@
     tools:showIn="@layout/app_bar_main">
 
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/container">
-        <!--<fragment-->
-            <!--android:id="@+id/fragment"-->
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <!--<android.support.v4.view.ViewPager-->
+            <!--android:id="@+id/container"-->
             <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--tools:layout_editor_absoluteX="143dp"-->
-            <!--tools:layout_editor_absoluteY="217dp" />-->
-    </FrameLayout>
+            <!--android:layout_height="wrap_content">-->
+        <!--</android.support.v4.view.ViewPager>-->
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/container"/>
+    </LinearLayout>
+
+
+
+
 
 </android.support.v4.widget.NestedScrollView>
