--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -6,6 +6,7 @@
     tools:context=".TvFragment">
 
     <LinearLayout
+        android:id="@+id/tvRootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,6 +17,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/airingTodayTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Airing Today"
@@ -45,6 +47,7 @@
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
+               android:id="@+id/onTheAirTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="On The Air"
@@ -70,11 +73,12 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/popularTvTitleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Popular"
@@ -109,6 +113,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/topRatedTvTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Top Rated"
