--- a/app/src/main/res/layout/row_layout_rectangular.xml
+++ b/app/src/main/res/layout/row_layout_rectangular.xml
@@ -38,7 +38,7 @@
             android:shadowColor="@color/text_shadow"
             android:shadowDx="1"
             android:shadowDy="1"
-            android:shadowRadius="2.5"
+            android:shadowRadius="3.5"
             android:text="Jurassic World"
             android:textColor="#ffffff"
             android:textSize="18sp"
@@ -57,7 +57,7 @@
             android:shadowColor="@color/text_shadow"
             android:shadowDx="1"
             android:shadowDy="1"
-            android:shadowRadius="2.5"
+            android:shadowRadius="3.5"
             android:text="6.6*"
             android:ellipsize="end"
             android:textColor="#ffffff"
@@ -93,14 +93,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-        <CheckBox
+        <ImageView
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:checked="false"
-            android:focusable="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </android.support.constraint.ConstraintLayout>
