Major Features Added

--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -46,7 +46,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewPopular"
             android:layout_width="match_parent"
-            android:layout_height="300dp"/>
+            android:layout_height="300dp"
+            android:nestedScrollingEnabled="false"/>
 
         <LinearLayout
             android:layout_width="match_parent"
